# test-framework

./: CMakeLists.txt  LICENSE  README.md  main.cpp  onlinestatistic.cpp  onlinestatistic.h  test.cpp
src/: CMakeLists.txt  benchmark-main.cpp  benchmarkbase.h  benchmarkbasic.h  benchmarkfixture.h  benchmarksettings.h  benchmarktemplate.h  onlinestatistic.cpp  onlinestatistic.h  test-main.cpp  testabstract.h  testbase.h  testcasebasic.h  testmacros.h  testmanager.cpp  testmanager.h  timing.cpp  timing.h  timingsettings.h.in
tests/: CMakeLists.txt  test_stats.cpp
